2.1.0/_sources/gallery/pyplots/whats_new_99_mplot3d.rst.txt


.. _sphx_glr_gallery_pyplots_whats_new_99_mplot3d.py:


======================
Whats New 0.99 Mplot3d
======================





.. image:: /gallery/pyplots/images/sphx_glr_whats_new_99_mplot3d_001.png
    :align: center





.. code-block:: python

    import numpy as np
    import matplotlib.pyplot as plt
    from matplotlib import cm
    from mpl_toolkits.mplot3d import Axes3D

    X = np.arange(-5, 5, 0.25)
    Y = np.arange(-5, 5, 0.25)
    X, Y = np.meshgrid(X, Y)
    R = np.sqrt(X**2 + Y**2)
    Z = np.sin(R)

    fig = plt.figure()
    ax = Axes3D(fig)
    ax.plot_surface(X, Y, Z, rstride=1, cstride=1, cmap=cm.viridis)

    plt.show()

**Total running time of the script:** ( 0 minutes  0.087 seconds)



.. only :: html

 .. container:: sphx-glr-footer


  .. container:: sphx-glr-download

     :download:`Download Python source code: whats_new_99_mplot3d.py <whats_new_99_mplot3d.py>`



  .. container:: sphx-glr-download

     :download:`Download Jupyter notebook: whats_new_99_mplot3d.ipynb <whats_new_99_mplot3d.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.readthedocs.io>`_
